[package]

name = "parsimonious"
version = "0.0.9"
authors = [ "Alan Jeffrey <ajeffrey@mozilla.com>" ]

description = "Parsimonious parser combinators"
repository = "https://github.com/asajeffrey/parsimonious"
documentation = "http://asajeffrey.github.io/parsimonious"
readme = "README.md"
keywords = [ "parser", "parsing", "streaming", "parser-combinators" ]
license = "MPL-2.0"

build = "build.rs"

[build-dependencies]
skeptic = "0.4.0"

[dev-dependencies]
skeptic = "0.4.0"
